# CodingScaffold

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.coding-scaffold/: eval-config.json
.coding-scaffold/sessions/: 2026-05-25-agentic-change-2.md  2026-05-25-agentic-change-3.md  2026-05-25-agentic-change-4.md  2026-05-25-agentic-change-5.md  2026-05-25-agentic-change.md
.github/PULL_REQUEST_TEMPLATE/: agentic-change.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: package-lock.json  package.json  rspress.config.ts
docs/docs/: _nav.json  index.md
docs/docs/superpowers/: _meta.json  index.md
docs/docs/superpowers/plans/: 2026-05-18-code-review-batch-1.md  2026-05-25-multi-tool-intake.md  2026-05-27-v0.7.0-cleanup-and-perf.md
docs/docs/superpowers/specs/: 2026-05-18-code-review-batch-1-design.md  2026-05-25-multi-tool-intake-design.md  2026-05-27-v0.7.0-cleanup-and-perf-design.md
docs/docs/wiki/: Context-Hygiene.md  Errors-and-Recovery.md  FAQ.md  Getting-Started.md  Glossary.md  Knowledge-Base.md  Model-Selection-and-Providers.md  Review-Backlog.md  Security.md  Stability.md  Team-Onboarding.md  Team-Rollout.md  Team-Sync.md  Tool-Adapters.md  Upgrading.md  _meta.json  index.md
docs/wiki/: Advanced-Workflows.md  Context-Hygiene.md  Core-Concepts.md  FAQ.md  Getting-Started.md  Home.md  Knowledge-Base.md  Model-Selection-and-Providers.md  Policy-Packs.md  Review-Backlog.md  Security.md  Skills-and-Agents.md  Team-Onboarding.md  Team-Rollout.md  Tool-Adapters.md  _Sidebar.md
src/coding_scaffold/: __init__.py  adapters.py  artifacts.py  cli.py  cli_help.py  cli_stability.py  context.py  context_lint.py  credentials.py  doctor.py  enablement.py  errors.py  eval_harness.py  file_ops.py  hardware.py  installers.py  intake.py  knowledge.py  mcp.py  memory.py  model_catalog.py  model_selection.py  permissions.py  personas.py  pilot.py  policy.py  pr_template.py  providers.py  router.py  routing_io.py  scaffold_version.py  session.py  skills.py  team.py  template_resources.py  theme.py  tour.py  updater.py  writers.py
src/coding_scaffold/templates/: __init__.py
src/coding_scaffold/templates/adapters/: claude-agentic-change.md  claude-first-session.md  claude-reviewer.md  claude.md  codex-agents.md  codex-config.toml  (+16 more)
tests/: conftest.py  test_adapters.py  test_artifacts_and_stability.py  test_cli.py  test_cli_ux.py  test_context.py  test_context_lint.py  test_credentials.py  test_docs_positioning.py  test_doctor.py  test_enablement.py  test_eval_harness.py  test_file_ops.py  test_flat_aliases.py  test_golden_outputs.py  test_hardware.py  test_hardware_cache.py  test_installers.py  test_intake.py  test_integration.py  test_knowledge.py  test_mcp.py  test_memory.py  test_model_selection.py  test_multi_tool.py  test_normalize_tools.py  test_permissions.py  test_persona_and_tour.py  test_pilot.py  test_policy.py  test_pr_template.py  test_providers.py  test_router.py  test_routing_io.py  test_scaffold_version.py  test_session.py  test_session_and_pr_template.py  test_session_worktree.py  test_skills.py  test_subcommand_help.py  (+6 more)
tests/fixtures/golden/: adapter_paths.txt  knowledge_paths.txt  scaffold_paths.txt
tests/fixtures/sample_repo/: README.md  pyproject.toml
(+12 files in other folders)
