[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-scaffold"
version = "0.1.0"
description = "Local-first coding agent scaffold with hardware probing, provider discovery, and routing config generation."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "CodingScaffold contributors" }]
dependencies = []
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
coding-scaffold = "coding_scaffold.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]
routellm = ["routellm[serve]>=0.2.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
