[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-scaffold"
version = "0.6.0"
description = "Local-first coding agent scaffold with hardware probing, provider discovery, and routing config generation."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "CodingScaffold contributors" }]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
routellm = ["routellm[serve]>=0.2.0"]
dev = ["pytest>=8.0", "pytest-xdist>=3.0", "ruff>=0.8"]

[project.scripts]
coding-scaffold = "coding_scaffold.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coding_scaffold = ["templates/adapters/*", "templates/writers/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
# pytest-xdist: parallelize across available cores. The perf gate test in
# tests/test_hardware_cache.py is in-process (no subprocess timing) so it's
# stable under worker scheduling. The autouse XDG_CACHE_HOME fixture
# (test_hardware_cache.py) isolates each worker's cache to its own tmp_path.
addopts = "-n auto"
